# test_task_C-_dev_infotecs_2025

./: README.md
first_exec/: CMakeLists.txt
first_exec/include/: buffer_controller.hpp  i_o_system.hpp  log_writer.hpp  logger.hpp  thread_controller.hpp
first_exec/source/: buffer_controller.cpp  i_o_system.cpp  logger.cpp  main.cpp  thread_controller.cpp
sec_exec/: CMakeLists.txt
sec_exec/include/: tcp_serv.hpp
sec_exec/source/: main.cpp  tcp_serv.cpp
